Give the iframe body some padding to avoide clipping a the bottom

--- a/resources.css
+++ b/resources.css
@@ -17,6 +17,7 @@
 
 body {
     font-family: 'Rubik', sans-serif;
+    padding: 8px;
 }
 
 /* Base grid system */
